# AC_server-client

./: CMakeLists.txt
chatHandler/: CMakeLists.txt
chatHandler/include/: chatHandler.hpp  chat_handler.hpp
chatHandler/src/: chatHandler.cpp  chat_handler.cpp
client/: CMakeLists.txt
client/include/: client.hpp  clientLegcy.hpp  client_legcy.hpp
client/src/: client.cpp  clientLegcy.cpp  client_legcy.cpp  main.cpp
consoleStlye/: CMakeLists.txt
consoleStlye/src/: consoleStlye.cpp
consoleStyle/: CMakeLists.txt
consoleStyle/include/: color.hpp  executionResult.hpp  execution_result.hpp
consoleStyle/src/: consoleStyle.cpp  executionResult.cpp  test.cpp
messageExchange/: CMakeLists.txt
messageExchange/include/: messageExchange.hpp
messageExchange/src/: messageExchange.cpp
server/: CMakeLists.txt
server/include/: server.hpp
server/src/: main.cpp  server.cpp
